@@ -1,5 +1,7 @@
 *SVN*
 
+* Document custom methods.  #10589 [Cheah Chu Yeow]
+
 * Ruby 1.9 compatibility.  [Jeremy Kemper]
 
 
